{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 135,
  "lineage": "164e0c16-baa8-081f-7569-9c0c698019f3",
  "resources": [
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b4a1b07f9ca13717",
            "arn": "arn:aws:ec2:ap-northeast-1:292967571286:instance/i-02da3333b30580c8b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02da3333b30580c8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d5c064bed5646ef6"
              }
            ],
            "primary_network_interface_id": "eni-0d5c064bed5646ef6",
            "private_dns": "ip-10-0-1-98.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.98",
            "public_dns": "ec2-52-69-237-4.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.69.237.4",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07abfc7c3d3a2242e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-065394943422d22b6",
            "tags": {
              "Name": "my-ec2-instance"
            },
            "tags_all": {
              "Name": "my-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02248c7a4ec177646"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292967571286",
            "id": "i-02da3333b30580c8b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.my_ec2.aws_security_group.ec2_sg",
            "module.my_vpc.aws_subnet.main",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:292967571286:loadbalancer/app/my-parc-alb/cd14375061962ae9",
            "arn_suffix": "app/my-parc-alb/cd14375061962ae9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-parc-alb-158695695.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:292967571286:loadbalancer/app/my-parc-alb/cd14375061962ae9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-parc-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-02248c7a4ec177646"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0429942cffdc15a7a"
              },
              {
                "subnet_id": "subnet-065394943422d22b6"
              }
            ],
            "subnets": [
              "subnet-0429942cffdc15a7a",
              "subnet-065394943422d22b6"
            ],
            "vpc_id": "vpc-0894258092e548cc5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:292967571286:loadbalancer/app/my-parc-alb/cd14375061962ae9"
          },
          "dependencies": [
            "module.my_ec2.aws_security_group.ec2_sg",
            "module.my_vpc.aws_subnet.main",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:292967571286:listener/app/my-parc-alb/cd14375061962ae9/9c23658d94941ea5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:292967571286:targetgroup/web-tg/b3e17812a69648f9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:292967571286:listener/app/my-parc-alb/cd14375061962ae9/9c23658d94941ea5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:292967571286:loadbalancer/app/my-parc-alb/cd14375061962ae9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:292967571286:listener/app/my-parc-alb/cd14375061962ae9/9c23658d94941ea5"
          },
          "dependencies": [
            "module.my_ec2.aws_lb.main",
            "module.my_ec2.aws_lb_target_group.web-tg",
            "module.my_ec2.aws_security_group.ec2_sg",
            "module.my_vpc.aws_subnet.main",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:292967571286:targetgroup/web-tg/b3e17812a69648f9",
            "arn_suffix": "targetgroup/web-tg/b3e17812a69648f9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:292967571286:targetgroup/web-tg/b3e17812a69648f9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0894258092e548cc5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:292967571286:targetgroup/web-tg/b3e17812a69648f9"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:292967571286:security-group/sg-02248c7a4ec177646",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-02248c7a4ec177646",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-ec2-instance-sg",
            "name_prefix": "",
            "owner_id": "292967571286",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0894258092e548cc5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292967571286",
            "id": "sg-02248c7a4ec177646",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1409330303",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-02248c7a4ec177646",
            "security_group_rule_id": "sgr-0d0f25df9554ff7f3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.my_ec2.aws_security_group.ec2_sg",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1122783061",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-02248c7a4ec177646",
            "security_group_rule_id": "sgr-04298bd079dc456ef",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.my_ec2.aws_security_group.ec2_sg",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:292967571286:security-group/sg-0a30232347925ce03",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a30232347925ce03",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02248c7a4ec177646"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "my-mysql-sg",
            "name_prefix": "",
            "owner_id": "292967571286",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-mysql-sg"
            },
            "tags_all": {
              "Name": "my-mysql-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0894258092e548cc5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292967571286",
            "id": "sg-0a30232347925ce03",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_allow_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-192706261",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0a30232347925ce03",
            "security_group_rule_id": "sgr-084617493d7c789f3",
            "self": false,
            "source_security_group_id": "sg-02248c7a4ec177646",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.my_ec2.aws_security_group.ec2_sg",
            "module.my_rds.aws_security_group.rds_sg",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3249584167",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0a30232347925ce03",
            "security_group_rule_id": "sgr-0fda4007764fa611d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.my_rds.aws_security_group.rds_sg",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:292967571286:internet-gateway/igw-0db955cfbbf6b318b",
            "id": "igw-0db955cfbbf6b318b",
            "owner_id": "292967571286",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "my-vpc-igw"
            },
            "tags_all": {
              "Name": "my-vpc-igw"
            },
            "vpc_id": "vpc-0894258092e548cc5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:292967571286:route-table/rtb-03d0562f33cf2d0d9",
            "id": "rtb-03d0562f33cf2d0d9",
            "owner_id": "292967571286",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "my-vpc-private-rt"
            },
            "tags_all": {
              "Name": "my-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0894258092e548cc5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292967571286",
            "id": "rtb-03d0562f33cf2d0d9",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:292967571286:route-table/rtb-0064dd964c505405b",
            "id": "rtb-0064dd964c505405b",
            "owner_id": "292967571286",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db955cfbbf6b318b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-vpc-public-rt"
            },
            "tags_all": {
              "Name": "my-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0894258092e548cc5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292967571286",
            "id": "rtb-0064dd964c505405b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.igw",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0973b17f255b3a191",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-03d0562f33cf2d0d9",
            "subnet_id": "subnet-0af8cad89475e7b2b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.my_vpc.aws_route_table.private_rt",
            "module.my_vpc.aws_subnet.main",
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0973b17f255b3a191",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-03d0562f33cf2d0d9",
            "subnet_id": "subnet-0af8cad89475e7b2b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.my_vpc.aws_route_table.private_rt",
            "module.my_vpc.aws_subnet.main",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c3c72bc5dabcf35",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0064dd964c505405b",
            "subnet_id": "subnet-065394943422d22b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.igw",
            "module.my_vpc.aws_route_table.public_rt",
            "module.my_vpc.aws_subnet.main",
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c3c72bc5dabcf35",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0064dd964c505405b",
            "subnet_id": "subnet-065394943422d22b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.igw",
            "module.my_vpc.aws_route_table.public_rt",
            "module.my_vpc.aws_subnet.main",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:292967571286:subnet/subnet-0af8cad89475e7b2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af8cad89475e7b2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "292967571286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "my-vpc-private-subnet",
              "type": "private"
            },
            "tags_all": {
              "Name": "my-vpc-private-subnet",
              "type": "private"
            },
            "vpc_id": "vpc-0894258092e548cc5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292967571286",
            "id": "subnet-0af8cad89475e7b2b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:292967571286:subnet/subnet-04bfc0e97a1b9ddd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bfc0e97a1b9ddd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "292967571286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "my-vpc-private-2-subnet",
              "type": "private"
            },
            "tags_all": {
              "Name": "my-vpc-private-2-subnet",
              "type": "private"
            },
            "vpc_id": "vpc-0894258092e548cc5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292967571286",
            "id": "subnet-04bfc0e97a1b9ddd4",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:292967571286:subnet/subnet-065394943422d22b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065394943422d22b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "292967571286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "my-vpc-public-subnet",
              "type": "public"
            },
            "tags_all": {
              "Name": "my-vpc-public-subnet",
              "type": "public"
            },
            "vpc_id": "vpc-0894258092e548cc5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292967571286",
            "id": "subnet-065394943422d22b6",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:292967571286:subnet/subnet-0429942cffdc15a7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0429942cffdc15a7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "292967571286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "my-vpc-public-2-subnet",
              "type": "public"
            },
            "tags_all": {
              "Name": "my-vpc-public-2-subnet",
              "type": "public"
            },
            "vpc_id": "vpc-0894258092e548cc5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292967571286",
            "id": "subnet-0429942cffdc15a7a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:292967571286:vpc/vpc-0894258092e548cc5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06fb0cf97b30faed0",
            "default_route_table_id": "rtb-028453f6852a16822",
            "default_security_group_id": "sg-098bfe213b1227b8d",
            "dhcp_options_id": "dopt-0366214a1b819672b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0894258092e548cc5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-028453f6852a16822",
            "owner_id": "292967571286",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292967571286",
            "id": "vpc-0894258092e548cc5",
            "region": "ap-northeast-1"
          }
        }
      ]
    }
  ]
}